--- a/module2-sol/index.html
+++ b/module2-sol/index.html
@@ -23,7 +23,7 @@
 
 		<section class="col-lg-4 col-md-12 col-sm-12">
 			<p>
-				<span class="tittle" id="t3">Udon</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, quisquam asperiores, odit necessitatibus fuga temporibus ducimus quibusdam iure, quaerat reiciendis vero expedita illum veritatis a. Unde odit, commodi cum labore dolore necessitatibus doloribus est ullam asperiores sequi error accusantium laboriosam quidem recusandae dignissimos minus modi tenetur earum. Alias, quod.</p>
+				<span class="tittle" id="t3">Udon</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, quisquam asperiores, odit necessitatibus fuga temporibus ducimus quibusdam iure, quaerat reiciendis vero expedita illum veritatis a. Unde odit, commodi cum labore doloribus est ullam asperiores sequi error accusantium laboriosam quidem recusandae dignissimos minus modi tenetur earum. Alias, quod.</p>
 		</section>
 	</div>
 </body>
